# CuteBD

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/common/: common.cpp  common.hpp
src/compliance/: compliance.cpp  compliance.hpp
src/conversion/: converter.cpp  converter.hpp
src/inspection/: inspector.cpp  inspector.hpp
src/models/: models.hpp
src/output/: bdbuilder.cpp  bdbuilder.hpp
src/tools/: toolchecker.cpp  toolchecker.hpp
src/ui/: mainwindow.cpp  mainwindow.hpp  mainwindow_pipeline.cpp  mainwindow_tables.cpp
